move header to config file

--- a/clustep/cluster_params.ini
+++ b/clustep/cluster_params.ini
@@ -11,3 +11,22 @@ M_gas = 15000
 a_gas = 200
 N_gas = 100000
 Z = 0
+
+# I have never changed these values, you can usually ignore them
+[header]
+# Mass array. Either gives the mass of each particle type or 0.0,
+# if defined individually for each particle
+mass_array = 0.0, 0.0, 0.0, 0.0, 0.0, 0.0
+time = 0.0 ; Time
+redshift = 0.0
+flag_sfr = 0 ; Star formation rate flag
+flag_feedback = 0 ; Feedback flag
+flag_cooling = 0 ; Cooling flag
+num_files = 1 ; Total number of files
+boxsize = 0.0
+omega0 = 0.0
+omega_lambda = 0.0
+hubble_param = 1.0
+flag_age = 0
+flag_metals = 0 ; 
+entropy = 0 ; Is entropy used instead of internal energy?
