--- a/clustep/cluster_params.ini
+++ b/clustep/cluster_params.ini
@@ -12,10 +12,10 @@ a_gas = 200
 N_gas = 100000
 Z = 0
 
-# I have never changed these values, you can usually ignore them
+; I have never changed these values, you can usually ignore them
 [header]
-# Mass array. Either gives the mass of each particle type or 0.0,
-# if defined individually for each particle
+; Mass array. Either gives the mass of each particle type or 0.0,
+; if defined individually for each particle
 mass_array = 0.0, 0.0, 0.0, 0.0, 0.0, 0.0
 time = 0.0 ; Time
 redshift = 0.0
