move gamma to param file, instead of using flags

--- a/clustep/params_cluster.ini
+++ b/clustep/params_cluster.ini
@@ -5,12 +5,19 @@ truncation_radius = 2500 ; Applies to both dark matter and gas
 M_dm = 50000  ; Mass in 1e10 Msun
 a_dm = 200    ; Scale factor in the Dehnen density profile (kpc)
 N_dm = 100000 ; Number of particles
+; Dehnen density profile free parameter. If gamma = 1, then the profile
+; is equal to a Hernquist profile, featuring a central cusp. If gamma = 0,
+; then the profile features a central core. See discussion in
+; http://adsabs.harvard.edu/abs/2017MNRAS.468.4107R
+; WARNING: currently the only acceptable values are 0 and 1.
+gamma_dm = 1
 
 [gas]
 M_gas = 15000
 a_gas = 200
 N_gas = 100000
-Z = 0
+Z = 0 ; Metalicity
+gamma_gas = 0 ; See note above for gamma_dm
 
 ; I have never changed these values, you can usually ignore them
 [header]
