--- a/clustep/params_cluster.ini
+++ b/clustep/params_cluster.ini
@@ -17,7 +17,7 @@ M_gas = 15000
 a_gas = 200
 N_gas = 100000
 gamma_gas = 0 ; See note above for gamma_dm
-Z = 0 ; Metalicity
+Z = 0 ; Metalicity (in units of solar metalicity)
 
 ; I have never changed these values, you can usually ignore them
 [header]
